Agregando detalles de Controladores

--- a/Veterinaria.WebAdmin/Views/OrdenDetalle/Eliminar.cshtml
+++ b/Veterinaria.WebAdmin/Views/OrdenDetalle/Eliminar.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Productos)
+            @Html.DisplayNameFor(model => model.Producto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Productos.Descripcion)
+            @Html.DisplayFor(model => model.Producto.Descripcion)
         </dd>
 
         <dt>
