--- a/Veterinaria.WebAdmin/Views/Ordenes/Index.cshtml
+++ b/Veterinaria.WebAdmin/Views/Ordenes/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Clientes.Nombre)
+            @Html.DisplayNameFor(model => model.Cliente.Nombre)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Fecha)
@@ -30,7 +30,7 @@
 {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Clientes.Nombre)
+            @Html.DisplayFor(modelItem => item.Cliente.Nombre)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Fecha)
