--- a/Veterinaria.WebAdmin/Views/OrdenDetalle/Crear.cshtml
+++ b/Veterinaria.WebAdmin/Views/OrdenDetalle/Crear.cshtml
@@ -19,7 +19,7 @@
         @Html.HiddenFor(model => model.OrdenId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Productos, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Producto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ProductoId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductoId, "", new { @class = "text-danger" })
