--- a/Veterinaria.WebAdmin/Views/Ordenes/Crear.cshtml
+++ b/Veterinaria.WebAdmin/Views/Ordenes/Crear.cshtml
@@ -17,9 +17,9 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Clientes, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Cliente, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ClientesId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("ClienteId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ClienteId, "", new { @class = "text-danger" })
             </div>
         </div>
