--- a/Veterinaria.WebAdmin/Views/Ordenes/Detalle.cshtml
+++ b/Veterinaria.WebAdmin/Views/Ordenes/Detalle.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Clientes.Nombre)
+            @Html.DisplayNameFor(model => model.Cliente.Nombre)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClienteId)
+            @Html.DisplayFor(model => model.Cliente.Nombre)
         </dd>
 
         <dt>
