--- a/Veterinaria.WebAdmin/Views/Ordenes/Editar.cshtml
+++ b/Veterinaria.WebAdmin/Views/Ordenes/Editar.cshtml
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Clientes, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Cliente, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ClienteId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ClienteId, "", new { @class = "text-danger" })
